force-app/main/default/objects/Payment_Credentials__mdt/Payment_Credentials__mdt.object-meta.xml
<CustomObject>
    <label>Payment Credentials</label>
    <pluralLabel>Payment Credentials</pluralLabel>
</CustomObject>