force-app/main/default/objects/Payment_Credentials__mdt/fields/Merchant_Account_Id__c.field-meta.xml
<CustomField>
    <fullName>Merchant_Account_Id__c</fullName>
    <label>Merchant Account Id</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>