force-app/main/default/objects/Payment_Credentials__mdt/fields/Merchant_PayPal_Account_Id__c.field-meta.xml
<CustomField>
    <fullName>Merchant_PayPal_Account_Id__c</fullName>
    <label>Merchant PayPal Account Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>