force-app/main/default/objects/Payment_Credentials__mdt/fields/Named_Credentials_PayPal__c.field-meta.xml
<CustomField>
    <fullName>Named_Credentials_PayPal__c</fullName>
    <label>Named Credentials PayPal</label>
    <length>255</length>
    <type>Text</type>
</CustomField>