force-app/main/default/objects/Payment_Credentials__mdt/fields/Payment_Info_PayPal_Named_Credentials__c.field-meta.xml
<CustomField>
    <fullName>Payment_Info_PayPal_Named_Credentials__c</fullName>
    <label>Payment Info PayPal Named Credentials</label>
    <length>255</length>
    <type>Text</type>
</CustomField>